tdf#93101 propagate external reference error from refcache token

Change-Id: I90491a7b18fddaddb3bbb4d7a3f8b9555b9b1198